--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         }
     },
     "scripts": {
+        "generate": "tree-sitter generate",
         "build": "tree-sitter build",
         "build-wasm": "tree-sitter build --wasm",
         "test": "tree-sitter test",
